--- a/style.css
+++ b/style.css
@@ -12,50 +12,128 @@ body {
     background: linear-gradient(68.15deg, #2F2325 16.62%, #8E5D52 85.61%);
 }
 
-.cabeçalho {
+.cabecalho {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.cabecalho-imagem {
+    height: 60px;
     
 }
 
-.Cabeçalho-imagem {
-    
-}
-
-.Cabeçalho-menu {
+.cabecalho-menu {
+    display: flex;
+    gap: 25px;
 
 }
 
-.Cabeçalho-menu-item {
+.cabecalho-menu-item {
+    font-family: 'Sarala' sans-serif;
+    color: aliceblue;
+    font-weight: 400;
+    font-size: 18px;
 
+}
+
+.cabecalho-menu-item:hover {
+    color: rgb(0, 255, 242);
 }
 
 .conteudo {
+    margin-bottom: 40px;
+    border-top: 0.4px solid aliceblue;
+}
+
+.conteudo-principal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.conteudo-principal-escrito{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    font-family: Righteous;
 
 }
 
-.botão {
+.conteudo-principal-escrito-titulo {
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 50px;
+    color: aliceblue;
 
 }
 
-.imagem-principal {
-    
+.conteudo-principal-escrito-subtitulo {
+    font-family: Sarala;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    color: #ECD6C4;
+}
 
+.conteudo-principal-escrito-botao {
+    background-color: #ECD6C4;
+    width: 150px;
+    height: 70px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    font-family: Sarala;
+    font-size: 16px;
+    color: #2F2325;
+    border-radius: 30px;
+}
+
+.conteudo-principal-escrito-botao:hover {
+    background-color: rgb(42, 165, 89);
+}
+
+.conteudo-principal-imagem {
+    height: 350px;
 }
 
 .conteudo-secundario {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 35px;
+    margin-top: 45px;
 }
 
-.conteudo-secundario-principal {
-
+.conteudo-secundario-titulo {
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 40px;
+    font-family: 'Sarala' sans-serif;
+    height: 300;
+    font-size: 30px;
+    text-align: center;
+    color: #FFF2E7;
 }
 
 .conteudo-secundario-paragrafo {
-    
+    font-family: 'Sarala' sans-serif;
+    height: 400;
+    align-items: center;
+    font-size: 18px;
+    line-height: 19px;
+    color: #FFF2E7;
+
 }
 
-.imagem-rodape {
-    
+.rodape {
+    padding: 40px;
+    border-top: 0.4px solid #FFF2E7;
+}
 
+.rodape-imagem {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
 }
